perf: Implement AVX2 SIMD optimizations for core algorithms
This commit introduces runtime-detected AVX2 SIMD acceleration for the most computationally intensive paths in the HTM implementation. By vectorizing floating-point operations and set overlaps, we significantly reduce the cycle time for Spatial Pooler and SDR operations on supported x86_64 hardware.

src/utils/simd.rs (new):
- Implements a SIMD utility module with runtime feature detection (`is_x86_feature_detected!`).
- Adds `fast_exp_f32` using Schraudolph's approximation for rapid boost factor calculation.
- Provides vectorized implementations for:
  - `compute_boost_factors` (batch exponential)
  - `update_duty_cycles` (batch moving averages)
  - `update_permanences` (clamped addition)
  - `sorted_overlap` (optimized intersection counting)
- Includes scalar fallbacks for non-AVX2 architectures (e.g., ARM/Apple Silicon).

src/algorithms/spatial_pooler.rs (modified):
- Replaced manual loops in `update_duty_cycles` and `update_boost_factors` with calls to the new `simd` module.
- The boost factor calculation now utilizes the fast exponential approximation.

src/types/sdr.rs (modified):
- Updated `get_overlap` to use `simd::sorted_overlap`, optimizing the critical path of comparing active bits between SDRs.

src/bin/perf_test.rs (new) & benches/simd_benchmarks.rs (new):
- Added a comprehensive performance testing framework.
- Supports running microbenchmarks, saving baselines to JSON, and comparing current performance against saved baselines to detect regressions or verify speedups.

tests/simd_correctness.rs (new):
- Added property-based testing (using `proptest`) to verify that SIMD implementations produce results mathematically equivalent to the scalar reference implementations across edge cases.

Impact:
- Performance: Significant throughput increase for Spatial Pooler compute cycles on AVX2-capable CPUs.
- Precision: Boost factor calculations now use an approximation (~1-2% relative error), which is wi

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ rust-version = "1.70"
 name = "mokosh"
 path = "src/lib.rs"
 
-# [[bin]]
-# name = "mokosh-bench"
-# path = "src/bin/bench.rs"
+[[bin]]
+name = "perf_test"
+path = "src/bin/perf_test.rs"
 
 [features]
 default = ["std"]
@@ -49,10 +49,10 @@ criterion = { version = "0.5", features = ["html_reports"] }
 proptest = "1.4"
 test-case = "3.3"
 
-# Benchmarks will be added later during performance optimization
-# [[bench]]
-# name = "sdr_benchmark"
-# harness = false
+# SIMD benchmarks for all computational hot paths
+[[bench]]
+name = "simd_benchmarks"
+harness = false
 
 [profile.release]
 lto = true
