feat: Add ECG anomaly detection example demonstrating HTM on physiological signals
This commit introduces a comprehensive example application that applies Hierarchical Temporal Memory (HTM) to medical time-series data. It demonstrates how to detect cardiac arrhythmias by learning the patterns of normal sinus rhythm and identifying deviations in wave morphology and timing.

examples/ecg_anomaly_detection.rs (new):
- Implements a synthetic ECG generator using Gaussian functions to model P, Q, R, S, and T wave components with physiologically accurate timing.
- Simulates natural Heart Rate Variability (HRV) using VLF, LF, and HF frequency components.
- capable of injecting 9 distinct arrhythmia types, including PVCs, PACs, ST elevation/depression, and Atrial Fibrillation.
- Defines `EcgAnomalyDetector`, a wrapper around `mokosh` components (`EcgEncoder`, `SpatialPooler`, `TemporalMemory`) that implements a hybrid anomaly scoring mechanism:
  - 30% weight: SDR pattern overlap (HTM native metric).
  - 70% weight: Statistical feature distance (amplitude, derivatives, energy).
- Includes a CLI harness that trains on normal data, establishes a baseline, and validates detection against all arrhythmia types with ASCII visualization of anomaly scores.

Impact:
- Provides a reference implementation for users applying `mokosh` to continuous, noisy, biological time-series data.
- Demonstrates advanced usage of the `EcgEncoder` and custom anomaly scoring logic beyond raw Temporal Memory output.
- Purely additive change; no impact on existing library behavior.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ path = "src/lib.rs"
 name = "perf_test"
 path = "src/bin/perf_test.rs"
 
+[[example]]
+name = "ecg_anomaly_detection"
+path = "examples/ecg_anomaly_detection.rs"
+
 [features]
 default = ["std"]
 std = []
