feat: Add ECG signal generator and SDR/HTM fingerprint visualizations
This commit introduces a comprehensive suite of examples for generating synthetic ECG signals and visualizing them through the lens of Sparse Distributed Representations (SDR) and Hierarchical Temporal Memory (HTM). These tools allow for visual inspection of how the algorithms interpret physiological anomalies.

examples/ecg_utils.rs (new):
- Implements a realistic synthetic ECG generator using Gaussian pulse models for PQRST wave morphology.
- Provides `EcgConfig` for controlling sample rate, noise, baseline wander, and Heart Rate Variability (HRV).
- Defines `ArrhythmiaType` and `ArrhythmiaConfig` to inject specific cardiac anomalies (PVC, ST Elevation, AFib, etc.) with configurable probability and severity.
- Serves as the shared signal source for the visualization examples.

examples/ecg_fingerprints.rs (new):
- Visualizes the semantic encoding of ECG signals as 256x256 "fingerprint" images.
- Implements a `SemanticEncoder` that maps temporal position (X-axis) and feature intensity (Y-axis) into a 2D SDR.
- Layers multiple feature extractors: raw amplitude, derivatives, curvature, and local frequency bands.
- Generates comparison grids showing how different arrhythmias manifest as distinct visual textures in the encoded space.

examples/htm_fingerprints.rs (new):
- Visualizes the internal state of the HTM Temporal Memory during processing.
- Maps the 65,536 TM cells to a 256x256 pixel grid using a mini-column layout.
- Implements a color-coded rendering scheme to visualize prediction accuracy:
  - Green: Correctly predicted active cells.
  - Blue: Predicted but inactive cells.
  - Red/Orange: Unpredicted active cells (anomalies).
- Demonstrates the system "learning" normal rhythms and highlighting anomalies (like PVCs) in red when they violate the learned temporal patterns.

Impact:
- Adds two new runnable examples (`ecg_fingerprints`, `htm_fingerprints`) that output images to a `fingerprints/

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,14 @@ path = "src/bin/perf_test.rs"
 name = "ecg_anomaly_detection"
 path = "examples/ecg_anomaly_detection.rs"
 
+[[example]]
+name = "ecg_fingerprints"
+path = "examples/ecg_fingerprints.rs"
+
+[[example]]
+name = "htm_fingerprints"
+path = "examples/htm_fingerprints.rs"
+
 [features]
 default = ["std"]
 std = []
@@ -52,6 +60,7 @@ bitvec = "1.0"
 criterion = { version = "0.5", features = ["html_reports"] }
 proptest = "1.4"
 test-case = "3.3"
+image = "0.25"
 
 # SIMD benchmarks for all computational hot paths
 [[bench]]
